# Farenheit

./: .env.example  .gitignore  Makefile  README.md
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py  scheduler.py
backend/app/api/: router.py
backend/app/api/v1/: alerts.py  auth.py  flights.py  health.py  predictions.py  recommendations.py  routes.py  stats.py
backend/app/core/: exceptions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  airline.py  airport.py  alert.py  base.py  flight_price.py  flight_schedule.py  prediction.py  route.py  scrape_job.py  user.py  watchlist.py
backend/app/schemas/: alert.py  common.py  flight.py  prediction.py  recommendation.py  route.py  user.py
backend/app/services/: auth_service.py  flight_service.py  prediction_service.py  recommendation_service.py  route_service.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx
frontend/src/app/(dashboard)/alerts/: layout.tsx  page.tsx
frontend/src/components/charts/: PredictionBand.tsx  PriceLineChart.tsx
frontend/src/components/flights/: AirportSearch.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx
frontend/src/hooks/: useFlightSearch.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/types/: flight.ts  prediction.ts  recommendation.ts
infra/: docker-compose.yml
infra/nginx/: nginx.conf
pipeline/: __init__.py  celery_app.py  config.py  db.py  pyproject.toml  schedules.py
pipeline/collectors/: amadeus_collector.py  base.py  travelpayouts_collector.py
pipeline/ml/: features.py
pipeline/ml/inference/: predictor.py
pipeline/ml/models/: ensemble.py  gradient_boost.py  prophet_model.py  statistical_model.py
pipeline/ml/training/: trainer.py
pipeline/tasks/: cleanup.py  collect_prices.py  generate_recommendations.py  run_prediction.py  send_alerts.py
scripts/: seed_airports.py
(+8 files in other folders)
