[project]
name = "farenheit-pipeline"
version = "0.1.0"
description = "Farenheit - Data collection and ML prediction pipeline"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.0",
    "joblib>=1.4.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
